--- a/src/Components/Hooks/Detalles.css
+++ b/src/Components/Hooks/Detalles.css
@@ -1,58 +1,86 @@
 .flip-container {
-    display: inline-block;
-    padding-left: 3em;
-    padding-right: 3em;
-    perspective: 1000px;
-    margin-bottom: 60px;
+  display: inline-block;
+  padding-left: 3em;
+  padding-right: 3em;
+  perspective: 1000px;
+  margin-bottom: 60px;
 }
 
 .card {
-    position: relative;
-    transition: transform 1.5s;
-    transform-style: preserve-3d;
-    height: 300px;
-    box-shadow: 0 5px 10px white;
-    margin: 0 auto;
-    margin-bottom: 50px;
+  position: relative;
+  transition: transform 1.5s;
+  transform-style: preserve-3d;
+  height: 300px;
+  box-shadow: 0 5px 10px white;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  background: rgb(0 0 0);
+}
+
+.tajetasdetalle .card {
+  position: relative;
+  padding-bottom: 20px;
+  height: auto;
+}
+
+.tajetasdetalle .card::after {
+  content: 'Vehículos';
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: red;
+  color: white;
+  padding: 0.3em;
+  font-size: 10px;
+  font-weight: bold;
+  border-radius: 0 6px 0 6px;
 }
 
 .front {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*Grid a la card y el texto de detalles*/
-.Detalles_person{
+
+.Detalles_person {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.CardDetalle {
+  margin-left: 50px;
+}
+
+.detalles {
+  margin-top: 50px;
+  color: white;
+}
+
+.tajetasdetalle {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+.Card_Text {
+  margin: 20px;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 0;
+  font-size: 15px;
+}
+
+@media (max-width: 768px) {
+  .tajetasdetalle {
     display: grid;
     grid-template-columns: auto auto;
-}
-
-.CardDetalle{
-    margin-left: 50px;
-}
-
-.detalles{
-    margin-top: 50px;
-    color: white;
-}
-
-.tajetasdetalle{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-}
-
-.Card_Text{
-    margin: 20px;
-}
-
-@media (max-width: 768px){
-    .tajetasdetalle{
-        display: grid;
-        grid-template-columns: auto auto;
-    }
+  }
 }
